--- a/assets/css/counter.css
+++ b/assets/css/counter.css
@@ -1,17 +1,28 @@
+body{
+    margin: 0px;
+    padding: 0px;
+    background-size:cover!important; 
+    font-family: Signika Negative, Asap, sans-serif;
+    color:white;
+    overflow:hidden;
+}
+html, body, #container {width:100%; height:100%; }
+
 .words{
-    /* border: 1px solid; */
-    width: 48%;
     position: fixed;
-    top: 50%;
+    /* top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
+    z-index: 1000;
 }
 .words #counter, .words h2{
     color:white;
     font-size:85px;
     font-weight: 700; 
     text-align: center;
+    margin: 0px;
 }
+
 #day-word, #hour-word, #minute-word, #second-word{
     font-size: 35px; 
 }
@@ -19,6 +30,7 @@
 .words #counter{
     display: flex;
     justify-content: center;
+    margin-top: -34px;
 }
 .words #counter div p{
     line-height: 87px;
@@ -50,5 +62,5 @@
 }
  *{
     font-family: 'Open Sans', sans-serif;
-    
- }
+    text-shadow: 1px 2px 20px black;
+}
