--- a/assets/css/winter.css
+++ b/assets/css/winter.css
@@ -1,11 +1,12 @@
-body{
-    background: red;
-    margin: 0px;
-    padding: 0px;
-    overflow: hidden;
-}
 #canv{
     background: url('../images/winter.jpg');
     background-size: cover; 
 }
 
+.words{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+}
